--- a/src/scss/sections/_about.scss
+++ b/src/scss/sections/_about.scss
@@ -1,6 +1,7 @@
 .about-us{
    width: 100%;
    max-width: 1200px; 
+   padding-top:4rem;
    margin: 4rem auto;
    position: relative;
    display: grid;
