--- a/src/scss/sections/_contact.scss
+++ b/src/scss/sections/_contact.scss
@@ -6,6 +6,8 @@
    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
    min-height: 100vh;
    margin: 4rem auto 0;
+   padding-top:3rem;
+
    background: url(../assets/img/bf_c1.jpg) no-repeat center center;
    background-size: cover; 
 
