--- a/src/scss/sections/_footer.scss
+++ b/src/scss/sections/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
    background: $main-clr;
-   color: #sec-clr;
+   color: $sec-clr;
    text-align: center;
    padding: 2.5rem 0;
    font-size: 1rem;
