--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -476,6 +476,7 @@ p {
 .about-us {
   width: 100%;
   max-width: 1200px;
+  padding-top: 4rem;
   margin: 4rem auto;
   position: relative;
   display: grid;
@@ -654,6 +655,7 @@ p {
   position: relative;
   width: 100%;
   max-width: 1200px;
+  padding-top: 3rem;
   margin: 4rem auto;
 }
 
@@ -847,7 +849,8 @@ p {
   position: relative;
   width: 100%;
   max-width: 1200px;
-  margin: 1rem auto;
+  margin: 3rem auto;
+  padding-top: 3rem;
   display: grid;
   grid-template-columns: 45% 55%;
 }
@@ -1009,6 +1012,7 @@ p {
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   min-height: 100vh;
   margin: 4rem auto 0;
+  padding-top: 3rem;
   background: url(../assets/img/bf_c1.jpg) no-repeat center center;
   background-size: cover;
 }
@@ -1122,7 +1126,7 @@ p {
 
 .footer {
   background: #2f5f02;
-  color: #sec-clr;
+  color: #ff6508;
   text-align: center;
   padding: 2.5rem 0;
   font-size: 1rem;
