--- a/src/scss/sections/_works.scss
+++ b/src/scss/sections/_works.scss
@@ -2,7 +2,9 @@
    position: relative;
    width: 100%;
    max-width: 1200px;
-   margin: 1rem auto;
+   margin: 3rem auto;
+   padding-top:3rem;
+
    display: grid;
    grid-template-columns: 45% 55%;
    
